tests/ui/async-await/issue-73541-2.stderr
error[E0767]: use of unreachable label `'a`
  --> $DIR/issue-73541-2.rs:7:26
   |
LL |       'a: loop {
   |       -- unreachable label defined here
LL | /         macro_rules! b {
LL | |             () => {
LL | |                 continue 'a
   | |                          ^^ unreachable label `'a`
LL | |
LL | |             }
LL | |         }
   | |_________- in this expansion of `b!`
...
LL |                   b!();
   |                   ---- in this macro invocation
   |
   = note: labels are unreachable through functions, closures, async blocks and modules

error: aborting due to previous error

For more information about this error, try `rustc --explain E0767`.
